add preference common tests to test small case

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -428,5 +428,14 @@
         <activity android:name="com.example.test.sensors.Proximity"/>
         <activity android:name="com.example.test.sensors.Rotation"/>
         <activity android:name="com.example.test.sensors.Temperature"/>
+        
+        <activity
+            android:name="com.example.test.handlesystemui.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.HANDLESYSTEMUI" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
