--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -451,5 +451,14 @@
             </intent-filter>
         </activity>
         <service android:name="com.example.test.binderpool.BinderPoolService" android:process=":remote"></service>
+        
+        <activity
+            android:name="com.example.test.touch.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.TOUCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
