add diy views : HorizontalScrollView

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -460,5 +460,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.example.test.diyviews.slidingconflict.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.SLIDINGCONFLICT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
