--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -303,16 +303,20 @@
         </activity>
         
         <activity
-            android:name="com.example.test.ble.CentralActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.test.ble.central.CentralActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.BLECENTRAL" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
+        <activity 
+            android:theme="@android:style/Theme.Holo.Light"
+            android:name="com.example.test.ble.central.DeviceControlActivity"/>
+        <service android:name="com.example.test.ble.central.BluetoothLeService" android:enabled="true"/>
         <activity
-            android:name="com.example.test.ble.PeripheralActivity"
+            android:name="com.example.test.ble.peripheral.PeripheralActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.BLEPERIPHERAL" />
