--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -138,7 +138,7 @@
         </activity>
         
         <activity
-            android:name="com.example.test.slide.SlideMenuActivity"
+            android:name="com.example.test.diyviews.slidemenu.SlideMenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SLIDEMENU" />
@@ -146,7 +146,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.test.slide.InfoActivity"
+            android:name="com.example.test.diyviews.slidemenu.InfoActivity"
             android:label="@string/app_name">
         </activity>
         
